# sfohack

./: README.md  install_frontend.sh  pyproject.toml
app/api/: main.py  models.py
app/core/: inferences.py  queries.py
conf.d/: .env  README.md
conf.d/docker/: docker-compose.yml
conf.d/nginx/: sfohack.conf  sfohack_ssl.conf
conf.d/supervisord/: sfohack.conf
conf.d/systemd/: sfohack.service
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx  router.tsx
frontend/src/app/api/: api.ts
frontend/src/app/components/: GroupPredictionPage.tsx  GroupPredictionResultsPage.tsx  Layout.tsx  MapComponent.tsx  PlotComponent.tsx  SelectTaskPage.tsx  Task1Page.tsx  Task1ResultsPage.tsx  Task2Page.tsx  Task2ResultsPage.tsx  schema.ts
frontend/src/app/store/: store.ts
