[tool.poetry]
name = "sfohack"
version = "0.0.0"
description = "siberian federal district hackathonn repository "
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
uvicorn = "^0.15.0"
cookiecutter = "^1.7.3"
loguru = "^0.5.3"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
numpy = "^1.23.1"
pandas = "^1.4.3"
joblib = "^1.1.0"
torch = "^1.12.0"
transformers = "^4.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
